<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_qiangdan">

    <fragment
        android:id="@+id/navigation_qiangdan"
        android:name="com.ilovefish.caviarapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_paipai"
        android:name="com.ilovefish.caviarapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_ditu"
        android:name="com.ilovefish.caviarapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_fangyu"
        android:name="com.ilovefish.caviarapp.ui.notifications.NotificationsFragment2"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_wode"
        android:name="com.ilovefish.caviarapp.ui.notifications.NotificationsFragment3"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>